// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CDropdownDivider renders correctly 1`] = `
<div
  class="c-dropdown-divider"
  role="separator"
/>
`;

exports[`CDropdownDivider renders correctly 2`] = `
<hr
  class="c-dropdown-divider"
  role="separator"
/>
`;
